[tool.poetry]
name = "deep_gamblers"
version = "0.0.0"
description = ""
authors = ["simaki <shota.imaki@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
